Update class 3 for 2024-1